# Advanced_Sequencer_EMPR

./: AdvancedSequencer.py  JTsequencer.c  ScrolledFrame.py  gui.py  sequencer.py  vector.c  vector.h
empr-refactored-potato-master/: CMakeLists.txt  README.md  _gitignore
empr-refactored-potato-master/Mini Projects/MP1/: Makefile  mp1.c  mp1.c~
empr-refactored-potato-master/Mini Projects/MP2/: Makefile  mp2.c  mp2.c.bak1  mp2.c~  serial.c
empr-refactored-potato-master/Mini Projects/MP2_2/: mp2.c  mp2.c.bak
empr-refactored-potato-master/Mini Projects/MP2_calc/: mp2.c
empr-refactored-potato-master/Mini Projects/MP2_combined/: Makefile  helloworld.bak2  i2c_scan.bak1  mp2.c  mp2.c.bak2  mp2.c.bak3
empr-refactored-potato-master/Mini Projects/MP3/combined/: #mp3.c#  CMakeLists.txt  Makefile  mp3.c
empr-refactored-potato-master/Mini Projects/MP3/task1/: mp3.c
empr-refactored-potato-master/Mini Projects/MP3/task2/: mp3.c
empr-refactored-potato-master/Mini Projects/MP3/task3/: mp3.c
empr-refactored-potato-master/Mini Projects/MP3/task4/: mp3.c
empr-refactored-potato-master/Mini Projects/MP3/task5/: CMakeLists.txt  mp3.c
empr-refactored-potato-master/generator/: CMakeLists.txt  EMPR.c  EMPR.h  Generator.c  Generator.h  JTsequencer.c  JTsequencer.h  Makefile  keypad.c  keypad.h  lcd.c  lcd.h  sequences.c  sequences.h  serial.c  vector.c  vector.h
empr-refactored-potato-master/misc/: Makefile  make.sh  monitor.c
empr-refactored-potato-master/monitor/: CMakeLists.txt  create_dmx_test.py  keypad.c  lcd.c  lcd.h  leds.c  leds.h  monitor.c  serial.c  test2.dmx
